--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,27 +3,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Supermarket App</title>
+    <title>Phoenix</title>
+      <style>
+    body {
+      background-color: #111;
+      color: #fff;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    .navbar {
+      background-color: #000 ;
+    }
+
+    .navbar-brand,
+    .navbar-nav .nav-link {
+      color: #ff5722 ;
+      font-weight: bold;
+    }
+
+    .navbar-nav .nav-link:hover {
+      text-decoration: underline;
+    }
+
+    h1 {
+      color: #ff5722;
+      margin-top: 40px;
+      margin-bottom: 30px;
+    }
+
+    label {
+      color: #ff5722;
+      font-weight: 500;
+    }
+
+    .form-control {
+      background-color: #333 ;
+      color: #fff ;
+      border: 1px solid #444;
+    }
+
+    .form-control:focus {
+      background-color: #333 ;
+      color: #fff ;
+      border-color: #ff5722;
+  
+    }
+
+    .btn-primary {
+      background-color: #ff5722;
+      border: none;
+    }
+
+    .btn-primary:hover {
+      background-color: #e64a19;
+    }
+
+    .alert-danger {
+      background-color: #b71c1c;
+      border-color: #f44336;
+      color: #fff;
+    }
+  </style>
   </head>
   <body>
-      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">Supermarket App</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="/register">Register</a>
-              </li> 
-              <li class="nav-item">
-                <a class="nav-link" href="/Login">Login</a>
-              </li> 
-            </ul>
-          </div>
-        </div>
-      </nav>
+      <nav class="navbar navbar-expand-sm navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand d-flex align-items-center" href="/">
+        <img src="/images/phoenix.png" alt="Phoenix Logo" width="32" height="32" />
+        Phoenix
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+          <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
     <div class="container">
         <h1 class="mt-5">Login</h1>
         <% if (errors && errors.length > 0) { %>
@@ -49,6 +108,7 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" class="form-control" required>
             </div>
+            <br><br>  
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
     </div>
